# ConceptX

./: .gitignore  README.md  env_clustering.yml  pyproject.toml  requirements.txt  setup.cfg
RAID/: README.md
alignment/: Alignment-intro.md  Alignment.md  alignment.sh  alignment_updated.py  analysis_results.csv  slurm-1536456.out
annotation/: AnnotationToolGUI.txt  README.md
annotation/TransformersConceptNet_Visualization/: README.md  app.py  utils.py
annotation/TransformersConceptNet_Visualization/database/: sentences.json
annotation/TransformersConceptNet_Visualization/database/layer10/: annotations.json
annotation/TransformersConceptNet_Visualization/database/layer4/: clusters-500.txt
clustering/: README.md  agglomerative.py  label_mapping.py  logger.py  visualization.py
data/Java Dataset/: README.md  javalang_tokenization_code.py
legacy/: Pronto-installation-orig.md
legacy/scripts/: cluster_stats.py  create_kmeans_clustering_logging.py  create_leaders_clustering_logging.py
legacy/scripts/clustering/: agglomerative.py  label_mapping.py  synthetic_data.py  visualization.py
legacy/scripts/clustering/tests/: test_clustering.py  test_label_mapping.py  test_synthetic_data.py  test_visualization.py
scripts/: .create_agglomerative_clustering_logging.py.swp  create_agglomerative_clustering.py  create_agglomerative_clustering_logging.py  create_leaders_clustering.py
tests/: test_clustering.py  test_label_mapping.py  test_logger.py  test_pipeline.py  test_synthetic_data.py  test_visualization.py
