[tool.poetry]
name = "conceptx"
version = "0.1.0"
description = ""
authors = ["Arushi Sharma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "1.5.1"
numpy = "2.1.1"
memory-profiler = "0.61.0"
dill = "0.3.8"
flask = "3.0.3"
matplotlib = "3.9.2"
scipy = "1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
